--- a/pages/sceneSet/index.wxml
+++ b/pages/sceneSet/index.wxml
@@ -3,14 +3,14 @@
     <view class="group">
       <view class="lable">分享标题</view>
       <view class="input">
-      <input name="title" value="{{title || ''}}" placeholder="请输入分享标题"/>
+      <input name="title" value="{{data.title || ''}}" placeholder="请输入分享标题"/>
       </view>
     </view>
 
     <view class="group">
       <view class="lable">分享描述</view>
       <view class="input">
-      <input name="describe" value="{{describe || ''}}" placeholder="请输入分享描述"/>
+      <input name="description" value="{{data.description || ''}}" placeholder="请输入分享描述"/>
       </view>
     </view>
 
@@ -18,15 +18,15 @@
       <view class="lable">分享封面</view>
       <view class="img" catchtap='getImg'>
         <view class="images">
-          <image src="{{image}}" mode="widthFix" wx:if="{{image}}"/>
+          <image src="{{image || data.cover}}" mode="widthFix" wx:if="{{image || data.cover}}"/>
         </view>
         <view class="p">推荐尺寸430X336，或等比例尺寸</view>
       </view>
     </view>
     
     <view class="group-content">
-      <view class="lable">分享封面</view>
-      <switch name="cover" checked="{{cover || ''}}" />
+      <view class="lable">上线使用</view>
+      <switch name="online" checked="{{data.online || ''}}" />
     </view>
 
     <button formType="submit" class="submit">保存</button>
