--- a/pages/scene/index.wxml
+++ b/pages/scene/index.wxml
@@ -1,17 +1,34 @@
-<import src="../template/bar.wxml"/>
 <scroll-view scroll-y class="scroll-view">
   <view class="index-list">
-    <view class="item">
-      <view class="img">
-        <image src='http://img0.imgtn.bdimg.com/it/u=1769868592,214736150&fm=27&gp=0.jpg'/>
+    <block wx:for="{{list}}" wx:key="this">
+      <view class="item">
+        <navigator url='/pages/divPage/index?id={{item._id}}&mode=false&uid={{item.ref}}' class="img">
+            <image wx:if="{{item.cover}}" src='{{item.cover}}'/>
+        </navigator>
+        <view class="content">
+          <view class="title">{{item.title}}</view>
+          <view class="describe">{{item.description}}</view>
+          <view class="tool">
+            <view class="xiansuo">
+              <!-- <image src='/images/xiansuo.png'/>
+              <text>100</text> -->
+            </view>
+            <view class='updata'>
+              <navigator url="/pages/sceneSet/index?operation=edit&id={{item._id}}">
+                <image src='/images/set.png'/>
+              </navigator>
+              <view class="fenxiao">
+                <button open-type="share" data-index="{{index}}"></button>
+                <image src='/images/fenxiao.png'/>
+              </view>
+            </view>
+          </view>
+        </view>
+        <view class="status {{ item.online ? '': 'no' }}">{{ item.online ? '使用中': '未使用' }}</view>
       </view>
-      <view class="content">
-        <view class="title">模版名称</view>
-        <view class="describe">您还没有添加</view>
-        <view class="tool">浏览次：22</view>
-      </view>
-      <view class="status">使用中</view>
+    </block>
+    <view class="information" wx:if="{{!list.length}}">
+      暂无模版
     </view>
   </view>
 </scroll-view>
-<template is="tabBar"/>
