--- a/pages/sceneSet/index.wxss
+++ b/pages/sceneSet/index.wxss
@@ -24,9 +24,9 @@
   margin-left: 20rpx;
 }
 .group .input input{
-  line-height: 60rpx;
+  height: 60rpx;
+  line-height: 70rpx;
 }
-
 .group .images {
   width: 430rpx;
   min-height: 180rpx;
