完成基本功能

--- a/app.wxss
+++ b/app.wxss
@@ -1,5 +1,6 @@
 /**app.wxss**/
 @import "./core/Layout/Layout.wxss";
+@import "./core/JyoComponent.wxss";
 
 .tab-bar {
   position: absolute;
@@ -25,4 +26,33 @@
 .tab-bar > .item image {
   width: 50rpx;
   height: 50rpx;
+}
+
+.authorization {
+  position: fixed;
+  top:0;bottom: 0;
+  left:0;right: 0;
+  background: rgba(0, 0, 0, 0.3);
+}
+.authorization .model {
+  position: absolute;
+  top:200rpx;
+  left: 50%;
+  margin-left: -300rpx;
+  width: 600rpx;
+  line-height: 60rpx;
+  background: #fff;
+  padding: 20rpx 40rpx;
+  border-radius: 10rpx;
+  font-size: 30rpx;
+  box-sizing: border-box;
+  color: #666;
+}
+.authorization .model-btn{
+  background: #f37c7b;
+  color: #fff;
+  margin-top: 30rpx;
+}
+.authorization .model-btn:after {
+  border:none;
 }
