--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -17,6 +17,7 @@
   width: 200rpx;
   height: 300rpx;
   margin-bottom: 20rpx;
+  overflow: hidden;
 }
 .index-list > .item:nth-child(3n) {
   margin-right: 0;
@@ -53,33 +54,4 @@
 .index-list .add image{
   width: 72rpx;
   height: 72rpx;
-}
-
-.authorization {
-  position: fixed;
-  top:0;bottom: 0;
-  left:0;right: 0;
-  background: rgba(0, 0, 0, 0.3);
-}
-.authorization .model {
-  position: absolute;
-  top:200rpx;
-  left: 50%;
-  margin-left: -300rpx;
-  width: 600rpx;
-  line-height: 60rpx;
-  background: #fff;
-  padding: 20rpx 40rpx;
-  border-radius: 10rpx;
-  font-size: 30rpx;
-  box-sizing: border-box;
-  color: #666;
-}
-.authorization .model-btn{
-  background: #f37c7b;
-  color: #fff;
-  margin-top: 30rpx;
-}
-.authorization .model-btn:after {
-  border:none;
 }
