--- a/pages/scene/index.wxss
+++ b/pages/scene/index.wxss
@@ -14,7 +14,6 @@ page {
 }
 .index-list .item {
   position: relative;
-  height: 300rpx;
   width: 678rpx;
   background: #fff;
   padding: 30rpx;
@@ -26,19 +25,19 @@ page {
   justify-content: space-between;
 }
 .index-list .item .img {
-  width: 160rpx;
-  height: 240rpx;
+  width: 256rpx;
+  height: 200rpx;
   background: #f2f2f2;
+  overflow: hidden;
 }
 .index-list .item .img image {
   width: 100%;
-  height: 100%;
 }
 
 .index-list .item .content {
   flex: 1;
   width: 160rpx;
-  height: 220rpx;
+  height: 200rpx;
   margin-left:20rpx;
   position: relative;
 }
@@ -61,8 +60,8 @@ page {
   justify-content: space-between;
 }
 .index-list .item .tool .xiansuo image{
- width: 30rpx;
- height: 30rpx; 
+ width: 40rpx;
+ height: 40rpx; 
  vertical-align: middle;
  margin-right: 10rpx;
 }
@@ -80,9 +79,10 @@ page {
 .index-list .item .tool .updata {
   display: flex;
 }
+
 .index-list .item .tool .updata image{
-  width: 30rpx;
-  height: 30rpx;
+  width: 40rpx;
+  height: 40rpx;
   margin-left: 20rpx;
   vertical-align: middle;
 }
